--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ image: alpine:latest
 
 variables:
   # AUTO_DEVOPS_DOMAIN is the application deployment domain and should be set as a variable at the group or project level.
-  # AUTO_DEVOPS_DOMAIN: domain.example.com
+  AUTO_DEVOPS_DOMAIN: 35.193.57.104.xip.io
 
   POSTGRES_USER: user
   POSTGRES_PASSWORD: testing-password
