--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: docker:stable
 
 before_script:
-  - apt0get install -y -qq curl
+  - apt-get install -y -qq curl
   - curl -sL https://deb.nodesource.com/setup_9.x | sh -
   - apt-get update -qq
   - apt-get install -y -qq nodejs build-essential iproute2 git vim
