--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
-image: gitlab
+image: docker:ubuntu
 
 before_script:
   - apt-get install -y -qq curl
-  - curl -sL https://deb.nodesource.com/setup_9.x | sh -
+  - curl -sL https://deb.nodesource.com/setup_9.x | bash -
   - apt-get update -qq
   - apt-get install -y -qq nodejs build-essential iproute2 git vim
   - nodejs -v
