--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 image: gitlab/gitlab-ce:latest
 
 before_script:
-  - apt-get install -y -qq curl
+  - apt-get update
+  - apt-get install -y curl
   - curl -sL https://deb.nodesource.com/setup_9.x | bash -
-  - apt-get update -qq
-  - apt-get install -y -qq nodejs build-essential iproute2 git vim
+  - apt-get update
+  - apt-get install -y nodejs build-essential iproute2 git vim
   - nodejs -v
 
 build:
