--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "redis playground",
     "main": "main.js",
     "scripts": {
-      "test": "mocha"
+      "test": "mocha",
+      "start": "node main.js"
+
     },
     "author": "",
     "license": "ISC",
