--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ image: alpine:latest
 
 variables:
   # AUTO_DEVOPS_DOMAIN is the application deployment domain and should be set as a variable at the group or project level.
-  AUTO_DEVOPS_DOMAIN: 35.193.57.104
+  AUTO_DEVOPS_DOMAIN: 35.193.57.104.xip.io
 
   KUBERNETES_VERSION: 1.8.6
   HELM_VERSION: 2.6.1
