--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "main.js",
     "scripts": {
       "test": "mocha",
-      "start": "node main.js &"
+      "start": "node main.js"
 
     },
     "author": "",
