--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: gitlab/dind
-
 stages:
   - build
   - deploy
@@ -16,4 +14,5 @@ deploy_stage:
   script:
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker pull registry.gitlab.com/sshankjha/chaos
-  - docker run --cap-add=NET_ADMIN -p 3000:80 registry.gitlab.com/sshankjha/chaos node main.js
+  - docker run --cap-add=NET_ADMIN -p 3000:3000 registry.gitlab.com/sshankjha/chaos -d node main.js
+
