--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,8 @@ build_docker_image:
 deploy_stage:
   stage: deploy
   script:
+  - docker rm -f cats
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker pull registry.gitlab.com/sshankjha/chaos
-  - docker run --cap-add=NET_ADMIN -p 3000:3000 -d registry.gitlab.com/sshankjha/chaos node main.js
+  - docker run --cap-add=NET_ADMIN -p 3000:3000 --name cats -d registry.gitlab.com/sshankjha/chaos node main.js
 
