--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,29 @@
 stages:
   - build
-  - deploy
+  - staging
+  - production
 
-build_docker_image:
+build:
   stage: build
   script:
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker build -t registry.gitlab.com/sshankjha/chaos .
   - docker push registry.gitlab.com/sshankjha/chaos
   
-deploy_stage:
+staging:
   stage: deploy
   script:
-  - docker rm -f cats || true
+  - docker rm -f cats_staging || true
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker pull registry.gitlab.com/sshankjha/chaos
-  - docker run --cap-add=NET_ADMIN -p 3000:3000 --name cats -d registry.gitlab.com/sshankjha/chaos node main.js
+  - docker run --cap-add=NET_ADMIN -p 3000:3000 --name cats_staging -d registry.gitlab.com/sshankjha/chaos node main.js
 
+production:
+  stage: production
+  script:
+  - docker rm -f cats_production || true
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+  - docker pull registry.gitlab.com/sshankjha/chaos
+  - docker run --cap-add=NET_ADMIN -p 80:3000 --name cats_production -d registry.gitlab.com/sshankjha/chaos node main.js
+  
+  
