--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
   - docker push registry.gitlab.com/sshankjha/chaos
   
 staging:
-  stage: deploy
+  stage: staging
   script:
   - docker rm -f cats_staging || true
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
@@ -25,5 +25,7 @@ production:
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker pull registry.gitlab.com/sshankjha/chaos
   - docker run --cap-add=NET_ADMIN -p 80:3000 --name cats_production -d registry.gitlab.com/sshankjha/chaos node main.js
+  when:
+  - manual
   
   
