--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ production:
   - docker rm -f cats_production || true
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker pull registry.gitlab.com/sshankjha/chaos
-  - docker run --cap-add=NET_ADMIN -p 80:80 --name cats_production -d registry.gitlab.com/sshankjha/chaos node /checkbox.io/server-side/site/server.js  
+  - docker run --cap-add=NET_ADMIN -p 80:80 --name cats_production -d registry.gitlab.com/sshankjha/chaos service mongodb start && service nginx restart && node /checkbox.io/server-side/site/server.js  
 # when: manual
   
   
